--- a/css/styles.css
+++ b/css/styles.css
@@ -92,6 +92,12 @@ body{
     object-fit: cover;
   }
 
+  /* button{
+    width: 100%;
+    height: 2.7rem;
+    background: var(--color-primary);
+  } */
+
   /* nav styles starts */
 
   nav{
@@ -108,14 +114,16 @@ body{
   nav button{
     display: none;
   }
+
   
-  .nav_container{
+  
+  .nav-container{
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
   }
-  
+
   
   .logo{
     font-weight: 600;
@@ -126,6 +134,12 @@ body{
     display: flex;
     align-items: center;
     gap: 4rem;
+
+  }
+
+  .navbar li:hover{
+    cursor: pointer;
+    color: var(--color);
   }
 
   /* .hero{
@@ -207,6 +221,28 @@ body{
     border: 3px solid var(--color-black);
     margin-top: 5rem;
     margin-right: 5rem;
+  }
+
+
+  /* newsletter section */
+
+  .newsletter{
+    padding: 6rem 2rem;
+    text-align: center;
+    margin: -3rem;
+    margin-top: 2rem;
+    margin-bottom: 2.5rem;
+    width: 100%;
+    height: 150px;
+    border: 1px solid var(--color-black);
+    border-radius: 0.5rem;
+    
+    display: flex;
+  }
+
+  .newsletter h3{
+    font-size: 3rem;
+
   }
 
 
@@ -464,6 +500,60 @@ body{
     font-size: 0.8rem;
   }
 
+  nav button{
+    display: inline-block;
+    font-size: 1.5rem;
+    cursor: pointer;
+    background: transparent;
+    color: var(--color);
+  }
+
+  nav button#close-nav{
+    display: none;
+
+  }
+
+  .nav_container{
+    position: relative;
+  }
+
+  .navbar{
+    position: absolute;
+    flex-direction: column;
+    top: 100%;
+    right: 0;
+    width: 12rem;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 0;
+    display: none;
+  }
+
+  .navbar li{
+    width: 100%;
+    height: 4.5rem;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    box-shadow: -2rem 3rem 7rem rgba(0, 0, 0, 0.7);
+    border-top: 1px solid var(--color);
+    animation: animateDropdown 1s 0s ease forwards;
+    transform-origin: top;
+  }
+
+  .navbar li a{
+    border-radius: 0;
+    width: 100%;
+    height: 100%;
+    background: var(--color-primary);
+    padding: 0 2rem;
+    display: flex;
+    align-items: center;
+    text-align: center;
+  }
+
+
+
   .main .boxes{
     grid-template-columns: 1fr 1fr;
     gap: 3rem;
@@ -473,5 +563,40 @@ body{
     grid-template-columns: 1fr 1fr;
     gap: 3rem;
   }
+
+}
+
+
+@media(max-width:560px){
+
+  section{
+    margin-top: 2rem;
+  }
+
+  h1{
+    font-size: 2rem;
+  }
+
+  
+  .main .boxes{
+    grid-template-columns: 1fr;
+    gap: 3rem;
+  }
+
+  .footer-container{
+    grid-template-columns: 1fr;
+    gap: 3rem;
+  }
+
+  .main .boxes .box{
+   align-self: center;
+    border-radius: 1rem;
+    height: 135px;
+    width: 300px;
+    margin-left: -1.7rem;
+    
+}
+
+
 
 }
