--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,7 @@ html{
 }
 
 body{
-    font-family: 'Montserrat', sans-serif;
+    font-family:  sans-serif;
     line-height: 1.6;
     overflow-x: hidden;
     color:var(--color-gray-200);
@@ -50,6 +50,12 @@ body{
     width: var(--container-width-lg);
     max-width: 1800px;
     margin-inline: auto;
+  }
+
+  .variable{
+    margin: 6rem;
+    margin-bottom: 0;
+    margin-top: 0;
   }
   
   section{
@@ -107,7 +113,7 @@ body{
     position: fixed;
     top: 0;
     z-index: 10;
-    box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 5px var(--color-black);
   
   }
 
@@ -128,6 +134,8 @@ body{
   .logo{
     font-weight: 600;
     font-size: 1.2rem;
+    width: 3rem;
+    height: 2.5rem;
   }
   
   .navbar{
@@ -140,6 +148,13 @@ body{
   .navbar li:hover{
     cursor: pointer;
     color: var(--color);
+  }
+
+  .scout{
+    margin-left: 2.5rem;
+    margin-right: 2.5rem;
+    font-weight: bolder;
+    font-size: 1.4rem;
   }
 
   /* hero section styles */
@@ -160,7 +175,7 @@ body{
 
   .hero .slider{
     position: relative;
-    width: 60%;
+    /* width: 60%; */
     overflow: hidden;
     margin-top: 5rem;
     width: 100%;
@@ -173,7 +188,7 @@ body{
 
   .hero .images img{
     height: 400px;
-    width: 80%;
+    width: 100%;
     transition: var(--transition);
     object-fit: contain;
   }
@@ -190,18 +205,18 @@ body{
   }
 
   .hero .dots label{
-    height: 20px;
-    width: 20px;
+    height: 10px;
+    width: 10px;
     border-radius: var(--card-border-radius-5);
-    border: solid 3px black;
+    border: solid 1px var(--color-primary);
     cursor: pointer;
     transition: var(--transition);
-    margin: 5px;
+    margin: 2px;
     
   }
 
   .hero .dots label:hover{
-    background: black;
+    background: var(--color);
   }
 
   .hero #img1:checked ~ .m1 {
@@ -240,7 +255,7 @@ body{
   }
 
   .hero .under .uno .newses{
-    border: 0.6px solid var(--color-black);
+    box-shadow: 0 0 5px var(--color-primary);
     border-radius: 0.3rem;
     padding: 1rem;
   }
@@ -280,7 +295,7 @@ body{
   }
 
   .hero .under .dos .newses{
-    border: 0.6px solid var(--color-black);
+    box-shadow: 0 0 5px var(--color-primary);
     border-radius: 0.3rem;
     padding: 1rem;
   }
@@ -315,15 +330,16 @@ body{
   }
 
    .recommended .aside{    
-    border: 0.6px solid var(--color-black);
+    
     border-radius: 0.3rem;
     padding: 0.5rem;
+    box-shadow: 0 0 5px var(--color-primary);
     
    }
 
    .recommended .aside .newses{
-     border: 0.6px solid var(--color-black);
-     border-top: 0.6px solid var(--color-black);
+     box-shadow: 0 0 5px var(--color-primary);
+     /* border-top: 0.6px solid var(--color-black); */
      margin: 1rem;
 
    }
@@ -357,7 +373,7 @@ body{
 
 
    .next .newses{
-    border: 0.6px solid var(--color-black);
+    box-shadow: 0 0 5px var(--color-primary);
     border-radius: 0.3rem;
     padding: 1rem;
    }
@@ -365,11 +381,27 @@ body{
    /* gradient section styles */
 
    .gradient-container{
-     margin: 4rem;
+   
+
+     background: linear-gradient(to left, #ff3232, #479cff);
    }
 
    .gradient{
-     background: linear-gradient(to left, red, blue);
+    align-items: center;
+    justify-content: center;
+    align-self: center;
+    
+   }
+
+   .gradient h3{
+    color: var(--color-bg);
+    padding-top: 2rem;
+    margin-bottom: 2rem;
+   }
+
+   .gradient h4{
+    color: var(--color-bg);
+    padding-bottom: 1.6rem;
    }
 
    .gradient .items{
@@ -382,12 +414,16 @@ body{
      display: flex;
      flex-direction: column;
      margin: 0.6rem;
+     margin-bottom: 5rem;
+
    }
 
    .gradient .items .item a{
      border-bottom: 1px solid var(--color-bg);
      border-radius: 0.2rem;
      margin: 0.35rem;
+     color: var(--color-bg);
+     padding-right: 1rem;
    }
 
    .gradient .button{
@@ -396,6 +432,13 @@ body{
      border: 1px solid transparent;
      padding: 1rem;
      border-radius: 0.2rem;
+     margin-bottom: 3rem;
+     margin-right: 30rem;
+   }
+
+   .gradient .button h3{
+     color: var(--color);
+     font-weight: bolder;
      
    }
 
@@ -411,28 +454,201 @@ body{
   /* newsletter section */
 
   .newsletter{
-    padding: 6rem 2rem;
-    text-align: center;
-    margin: -3rem;
-    margin-top: 2rem;
-    margin-bottom: 2.5rem;
-    width: 100%;
-    height: 150px;
-    border: 1px solid var(--color-black);
-    border-radius: 0.5rem;
-    
     display: flex;
+    justify-content: center;
+    align-items: center;
+    background: var(--color-bg);
+
   }
 
-  .newsletter h3{
-    font-size: 3rem;
+  .card{
+    width: 100%;
+    height: 30%;
+    background: var(--color-bg);
+    box-shadow: 0 0 5px var(--color-primary);
+    border-radius: 10px;
+    display: flex;
+    margin-bottom: 2.5rem;
 
   }
+
+  .card .col-1{
+    flex-basis: 65%;
+    width: 300px;
+    height: 250px;
+    float: left;
+  }
+
+  .col-1 .letter{
+    margin: 3rem 2rem;
+  }
+
+  .letter h4{
+    color: var(--color-black);
+    font-weight: 700;
+    font-size: 1.8rem;
+  }
+
+  .letter p{
+    color: var(--color-black);
+    font-weight: 600;
+    font-size: 1rem;
+    margin-top: 0.5rem;
+    opacity: 0.7;
+  }
+
+  .letter .form{
+    margin: 1.2rem 0;
+  }
+
+  .letter .form input{
+    width: 24rem;
+    height: 2rem;
+    padding-left: 1rem;
+  }
+
+  .letter .form a{
+    padding:  0.5rem 1rem;
+    background: var(--color);
+    color: var(--color-primary);
+  }
+
+
+  .card .col-2{
+    flex-basis: 35%;
+  }
+
+  .col-2 img{
+    width: 90%;
+    height: 90%;
+    margin: 0.8rem;
+  }
+
+
 
   /* newsletter styles end */
 
 
-  /* content pge styles begins */
+
+
+  /* exclusive page styles start */
+
+  
+
+  /* exclusive page styles end */
+
+.exclusive-container{
+    display: flex;
+}
+
+.exclusive{
+  width: 70%;
+  margin: 3rem;
+  margin-top: 5rem;
+}
+
+.exclusive .rows{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1.5rem;
+
+}
+
+
+
+.exclusive .rows .row-img img{
+  width: 90%;
+  height: 80%;
+}
+
+.exclusive .row-text{
+  margin-left: -0.5rem;
+}
+
+.exclusive .row-text h5{
+  text-transform: uppercase;
+  margin-top: 0.5rem
+}
+.exclusive .row-text a{
+  color: var(--color);
+  text-transform: uppercase;
+  
+}
+
+.exclusive .row-text h4{
+  margin-top: 0.5rem;
+}
+
+.exclusive .row-text p{
+  margin-top: 1rem;
+}
+
+
+
+  /* content page styles begins */
+
+  
+.content-container{
+    display: flex;
+}
+
+.content{
+  width: 70%;
+  margin: 3rem;
+  margin-top: 5rem;
+}
+
+.content .content-text h5{
+  color: var(--color-black);
+  font-weight: lighter;
+  margin-bottom: 1rem;
+}
+
+.content .content-text p{
+  margin-bottom: 0.9rem;
+}
+
+/* .content .content-text .icons{
+  display: flex;
+  flex-direction: row;
+ 
+} */
+
+.content  .fill{
+  display: flex;
+  flex-direction: column;
+}
+
+.content .fill form{
+  margin: 2rem;
+}
+
+.content .fill input{
+  width: 42rem;
+  height: 3rem;
+  margin-bottom: 1.5rem;
+  border-radius: 0,4rem;
+}
+
+.content .fill input::after{
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+.content .fill textarea{
+  width: 42rem;
+  height: 7rem;
+  margin-bottom: 1.5rem;
+  border-radius: 0,4rem;
+}
+
+.content .fill button{
+  left: 0;
+}
+
+
+
+  /* content page styles ends */
 
   /* all news styles */
   .all-container{
@@ -452,8 +668,9 @@ body{
   }
 
   .all-news .newses{
-    border: 0.8px solid var(--color-black);
+    /* border: 0.8px solid var(--color-black); */
     border-radius: 0.2rem;
+    box-shadow: 0 0 5px var(--color-primary);
   }
 
   .all-news .newses .news-image{
@@ -598,6 +815,10 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.left .socials i{
+  font-size: 1.2rem;
 }
 
 .left .socials a:hover{
@@ -750,6 +971,14 @@ body{
 /* Responsiveness and media queries */
 
 @media screen and (max-width:1084px) {
+
+  body{
+  
+  font-size: 1.1rem;
+}
+
+
+
   
   .container{
     width: var(--container-width-md);
@@ -765,6 +994,14 @@ body{
 
   h5{
     font-size: 0.8rem;
+  }
+
+  p{
+    font-size: 1.2rem;
+  }
+
+  a{
+    font-size: 1.2rem;
   }
 
   nav button{
@@ -819,6 +1056,49 @@ body{
     text-align: center;
   }
 
+  
+  .hero-container{
+    display: grid;
+  }
+
+  .hero{
+    order: 1;
+    width: 70%;
+    align-self: center;
+  }
+
+  .hero .slider{
+    height: 80%;
+  }
+
+  .exclusive-container{
+    display: grid;
+ }
+
+ .content-container{
+   display: grid;
+  }
+
+  .content{
+    order: 1;
+    width: 70%;
+    align-self: center;
+  }
+
+  .exclusive{
+    order: 1;
+    width: 70%;
+    align-self: center;
+  }
+  
+
+  .recommended{
+    order: 2;
+    width: 70%;
+    align-self: center;
+  }
+
+
   .hero .under .uno{
     display: grid;
     grid-template-columns: 1fr;
@@ -833,6 +1113,29 @@ body{
     justify-content: center;
   }
 
+  .gradient .items{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+   }
+
+  .exclusive .rows{
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 3rem;
+  }
+
+  .content .content-text h5{
+    color: var(--color-black);
+    font-weight: lighter;
+    margin-bottom: 1rem;
+    font-size: 1.7rem;
+  }
+  
+  .content .content-text p{
+    margin-bottom: 1rem;
+    font-size: 1.3rem;
+  }
   
   .next{
     display: grid;
@@ -863,6 +1166,13 @@ body{
 
 @media(max-width:640px){
 
+  body{
+  
+    font-size: 1.4rem;
+  }
+  
+  
+
   section{
     margin-top: 2rem;
   }
@@ -871,11 +1181,94 @@ body{
     font-size: 2rem;
   }
 
+  p{
+    font-size: 1.4rem;
+  }
+
+  a{
+    font-size: 1.4rem;
+  }
+
+  .hero-container{
+    display: grid;
+  }
+
+  .exclusive-container{
+    display: grid;
+ }
+
+ .content-container{
+   display: grid;
+  }
+
+ 
+  .hero{
+    order: 1;
+    width: 95%;
+    align-self: center;
+    margin-right: 1rem;
+  }
+
+  .hero .slider{
+    height: 90%;
+  }
+
+  .content{
+    order: 1;
+    width: 95%;
+    align-self: center;
+    margin-right: 1rem;
+  }
+
+  .exclusive{
+    order: 1;
+    width: 95%;
+    align-self: center;
+    margin-right: 1rem;
+  }
+
+  .recommended{
+    order: 2;
+    width: 90%;
+    align-self: center;
+    margin-left: -1.2rem;
+    /* margin-right: 1rem; */
+  }
+
   
   .next{
     display: grid;
     grid-template-columns: 1fr;
     gap: 3rem;
+  }
+
+  .gradient .items{
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 2rem;
+   }
+
+  .content-container{
+    align-items: center;
+    margin-left: -1.3rem;
+  }
+
+  
+  .exclusive-container{
+    align-items: center;
+    margin-left: -1.3rem;
+  }
+
+  .content .content-text h5{
+    color: var(--color-black);
+    font-weight: lighter;
+    margin-bottom: 1rem;
+    font-size: 1.9rem;
+  }
+  
+  .content .content-text p{
+    margin-bottom: 1rem;
+    font-size: 1.5rem;
   }
 
   .all-news{
